# cmc

./: .gitignore  .gitmodules  CMakeLists.txt  CmcConfig.cmake.in  CmcConfig.h.in  INSTALL.md  Makefile.am  README.md  bootstrap  cmcConfig.cmake.in  cmcConfig.h.in  cmc_fortran_specific.mk  configure.ac
example/: CMakeLists.txt  Makefile.am  cmc_compare_bin_data_output.cxx  cmc_compare_lossy_compression_output.cxx  cmc_t8_construct_mesh_and_data_for_compression.cxx  cmc_test_lorenzo_prediction.cxx
example/lossless/: cmc_embedded_multi_res_compression.cxx  cmc_embedded_multi_res_ext_reconstruction_compression.cxx  cmc_embedded_pcp4_multi_res_compression.cxx  cmc_embedded_prefix_compression.cxx  cmc_lossless_diff_compression.cxx  cmc_lossless_prefix_compression.cxx  cmc_lzss.cxx  cmc_patch_compression.cxx
example/lossy/: cmc_amr_compression.cxx  cmc_amr_lossy_compression.cxx  cmc_amr_lossy_different_mesh.cxx  cmc_amr_patch_compression.cxx  cmc_lossy_full_amr_compression.cxx  cmc_lossy_prefix_compression.cxx  cmc_multi_res_ext_reconstruction_variable.cxx  cmc_multi_res_test_variations.cxx  cmc_prefix_lossy_compression.cxx  cmc_quantized_prefix_compression.cxx  cmc_trimmed_multi_res_compression.cxx
example/lossy_amr_nc_compression/: cmc_fortran_lossy_amr_compression.f90  cmc_lossy_amr_nc_compression.cxx
example/netcdf/: cmc_gather_nc_data.cxx
src/: CMakeLists.txt  Makefile.am  cmc.cxx  cmc.h  cmc.hxx  cmc_compression.cxx  cmc_compression.hxx  cmc_config.h
src/comparison/: cmc_test_comparison_compression.cxx  cmc_test_comparison_compression.hxx  cmc_test_comparison_decompression.cxx  cmc_test_comparison_decompression.hxx  cmc_test_comparison_pcp_decoder.hxx
src/component_interfaces/: cmc_t8_messy.cxx  cmc_t8_messy.h  cmc_t8_nc.cxx  cmc_t8_nc.h
src/compression_io/: cmc_byte_compression_output.txx  cmc_compression_attr_names.hxx  cmc_compression_nc_output.hxx  cmc_compression_output.hxx  cmc_compression_serial_output.hxx  cmc_decompression_input.hxx  cmc_decompression_nc_input.hxx  cmc_decompression_serial_input.hxx  cmc_embedded_byte_compression_output.txx  cmc_patch_byte_compression_output.txx  cmc_patch_byte_compression_serial_output.txx  cmc_serial_io_util.hxx
src/decompression/: cmc_byte_decompression_variable.hxx  cmc_prefix_decompression.cxx  cmc_prefix_decompression.hxx
src/fortran_interfaces/: cmc_amr_compression_interface.f90  cmc_fortran.f90  cmc_messy_interface.f90  cmc_netcdf_interface.f90  cmcc.c  cmcc.h  cmcc_wrapper.c  cmcc_wrapper.h
src/input/: cmc_binary_reader.hxx  cmc_binary_reader_forward.hxx  cmc_forward_decl_input_variable.hxx  cmc_input_variable.cxx  cmc_input_variable.hxx  cmc_netcdf.cxx  cmc_netcdf.hxx
src/lossless/: cmc_byte_compression_variable.hxx  cmc_byte_decompression_variable.hxx  cmc_diff_compression.cxx  cmc_diff_compression.hxx  cmc_diff_decompression.cxx  cmc_diff_decompression.hxx  cmc_embedded_byte_compression_ext_variable.hxx  cmc_embedded_byte_compression_extended_variable.hxx  cmc_embedded_byte_compression_variable.cxx  cmc_embedded_byte_compression_variable.hxx  cmc_embedded_byte_decompression_variable.hxx  cmc_embedded_multi_res_extraction_compression.hxx  cmc_embedded_multi_res_extraction_decompression.hxx  cmc_embedded_multi_res_extraction_lin_reconstruction_compression.hxx  cmc_embedded_multi_res_extraction_nearest_neighbor_reconstruction.hxx  cmc_embedded_prefix_extraction_compression.hxx  cmc_embedded_prefix_extraction_compression_plain_suffixes.hxx  cmc_embedded_prefix_extraction_decompression.hxx  cmc_embedded_prefix_extraction_decompression_plain_suffixes.hxx  cmc_lzss.cxx  cmc_lzss.h  cmc_multi_res_extraction_compression.hxx  cmc_multi_res_extraction_decompression.hxx  cmc_multi_res_extraction_residual_computation.hxx  cmc_prefix_compression.cxx  cmc_prefix_compression.hxx  cmc_prefix_extraction_compression.hxx  cmc_prefix_extraction_compression_plain_suffixes.hxx  cmc_prefix_extraction_decompression.hxx  cmc_prefix_extraction_decompression_plain_suffixes.hxx  cmc_residual_compression.cxx  cmc_residual_compression.hxx  cmc_test_pcp4_compression.hxx  cmc_test_pcp4_decompression.hxx  cmc_test_pcp4_embedded_compression.hxx  cmc_test_pcp4_embedded_decompression.hxx
src/lossy/: cmc_ac_compression_variable.hxx  cmc_adaptive_coarsening.cxx  cmc_adaptive_coarsening.hxx  cmc_amr_compression.cxx  cmc_amr_compression.hxx  cmc_amr_compressor.cxx  cmc_amr_compressor.h  cmc_amr_lossy_compression.cxx  cmc_amr_lossy_compression.hxx  cmc_amr_lossy_compression_settings.cxx  cmc_amr_lossy_compression_settings.hxx  cmc_byte_compression_variable.hxx  cmc_compression_class.hxx  cmc_embedded_byte_compression_extended_variable.hxx  cmc_embedded_byte_compression_scanline_variable.hxx  cmc_embedded_byte_compression_variable.hxx  cmc_embedded_byte_decompression_variable.hxx  cmc_embedded_idw_compression_variable.hxx  cmc_embedded_idw_extraction_compression.hxx  cmc_embedded_multi_res_extraction_nearest_neighbor_reconstruction.hxx  cmc_embedded_prefix_quantization_compression.hxx  cmc_prefix_encoding.hxx  (+19 more)
test/: CMakeLists.txt  Makefile.am  cmc_adaptive_coarsening_variable.cxx  cmc_arithmetic_coding.cxx  cmc_arithmetic_encoding.cxx  cmc_binary_reader.cxx  cmc_bitmap.cxx  cmc_bitmap_view.cxx  cmc_bitvector_view.cxx  cmc_byte_compression_arithmetic_coding.cxx  cmc_byte_compression_value.cxx  cmc_compression_settings.cxx  cmc_create_compression_data.cxx  cmc_create_compression_settings.cxx  cmc_create_error_domains.cxx  cmc_create_input_variables.cxx  cmc_embedded_byte_compression_variable.cxx  cmc_initial_mesh_coverage.cxx  cmc_lossy_amr_compression.cxx  cmc_multi_res_compression_arithmetic_coding.cxx  cmc_multi_res_compression_variable.cxx  cmc_nc_data_output.cxx  cmc_nc_data_output_input.cxx  cmc_prefix.cxx  cmc_prefix_compression_arithmetic_coding.cxx  cmc_prefix_compression_variable.cxx  cmc_scaling_and_offset_for_input_var.cxx  cmc_serialize_value.cxx  cmc_setup_compression_data.cxx  cmc_split_variables.cxx  cmc_test.hxx  cmc_transform_input_var_coordinates.cxx
workflows/: CMakeLists.txt  cmc_compare_lossless_decompression_output.cxx
(+208 files in other folders)
